; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_tclvar.c_tclvarConnect.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_tclvar.c_tclvarConnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32*, i32 }

@tclvarConnect.zSchema = internal constant [100 x i8] c"CREATE TABLE x(  name TEXT,  arrayname TEXT,  value TEXT,  fullname TEXT PRIMARY KEY) WITHOUT ROWID\00", align 16
@SQLITE_NOMEM = common dso_local global i32 0, align 4
@SQLITE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32, i8**, i32**, i8**)* @tclvarConnect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tclvarConnect(i32* %0, i8* %1, i32 %2, i8** %3, i32** %4, i8** %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8**, align 8
  %12 = alloca i32**, align 8
  %13 = alloca i8**, align 8
  %14 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i8** %3, i8*** %11, align 8
  store i32** %4, i32*** %12, align 8
  store i8** %5, i8*** %13, align 8
  %15 = call %struct.TYPE_3__* @sqlite3MallocZero(i32 16)
  store %struct.TYPE_3__* %15, %struct.TYPE_3__** %14, align 8
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %17 = icmp eq %struct.TYPE_3__* %16, null
  br i1 %17, label %18, label %20

18:                                               ; preds = %6
  %19 = load i32, i32* @SQLITE_NOMEM, align 4
  store i32 %19, i32* %7, align 4
  br label %31

20:                                               ; preds = %6
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 1
  %23 = load i32**, i32*** %12, align 8
  store i32* %22, i32** %23, align 8
  %24 = load i8*, i8** %9, align 8
  %25 = bitcast i8* %24 to i32*
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  store i32* %25, i32** %27, align 8
  %28 = load i32*, i32** %8, align 8
  %29 = call i32 @sqlite3_declare_vtab(i32* %28, i8* getelementptr inbounds ([100 x i8], [100 x i8]* @tclvarConnect.zSchema, i64 0, i64 0))
  %30 = load i32, i32* @SQLITE_OK, align 4
  store i32 %30, i32* %7, align 4
  br label %31

31:                                               ; preds = %20, %18
  %32 = load i32, i32* %7, align 4
  ret i32 %32
}

declare dso_local %struct.TYPE_3__* @sqlite3MallocZero(i32) #1

declare dso_local i32 @sqlite3_declare_vtab(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
